Add new challenge(s)

--- a/Customer Purchase Trends.ipynb
+++ b/Customer Purchase Trends.ipynb
@@ -64,8 +64,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5cd9bece-39b8-4e9d-bf39-00fadf81b419",
+   "metadata": {},
+   "source": [
+    "Task:\n",
+    "Calculate the total revenue generated from sales for each sales status\n",
+    "Find the product with the highest total revenue.\n",
+    "Include the product_id, total revenue, and the total quantity sold in your result.\n",
+    "Sort the results by total revenue in descending order."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
+   "id": "ed7235ed-38ad-4cb4-bb6b-125953fdf393",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+pymysql://root:***@localhost:3306/sales\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Tables_in_sales</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>customer</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>orders</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('customer',), ('orders',)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SHOW TABLES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "84c21852-0ebf-45cc-89b9-255347cb2aab",
    "metadata": {
     "scrolled": true
@@ -76,7 +134,7 @@
      "output_type": "stream",
      "text": [
       " * mysql+pymysql://root:***@localhost:3306/sales\n",
-      "15 rows affected.\n"
+      "4 rows affected.\n"
      ]
     },
     {
@@ -85,131 +143,49 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>CustomerID</th>\n",
-       "            <th>CustomerName</th>\n",
-       "            <th>City</th>\n",
-       "            <th>SignupDate</th>\n",
+       "            <th>status</th>\n",
+       "            <th>total</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>1</td>\n",
-       "            <td>Alice Johnson</td>\n",
-       "            <td>New York</td>\n",
-       "            <td>2023-01-10</td>\n",
+       "            <td>Pending</td>\n",
+       "            <td>4043.09</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>2</td>\n",
-       "            <td>Bob Smith</td>\n",
-       "            <td>Los Angeles</td>\n",
-       "            <td>2022-05-15</td>\n",
+       "            <td>Cancelled</td>\n",
+       "            <td>4164.09</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>3</td>\n",
-       "            <td>Charlie Lee</td>\n",
-       "            <td>Chicago</td>\n",
-       "            <td>2023-03-20</td>\n",
+       "            <td>Delivered</td>\n",
+       "            <td>7240.55</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>4</td>\n",
-       "            <td>Diana Adams</td>\n",
-       "            <td>New York</td>\n",
-       "            <td>2022-07-11</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>5</td>\n",
-       "            <td>Ethan Clark</td>\n",
-       "            <td>Los Angeles</td>\n",
-       "            <td>2023-06-05</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>6</td>\n",
-       "            <td>Fiona Green</td>\n",
-       "            <td>Chicago</td>\n",
-       "            <td>2023-04-08</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>7</td>\n",
-       "            <td>George Baker</td>\n",
-       "            <td>New York</td>\n",
-       "            <td>2022-12-17</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>8</td>\n",
-       "            <td>Helen Carter</td>\n",
-       "            <td>Los Angeles</td>\n",
-       "            <td>2023-02-22</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>9</td>\n",
-       "            <td>Irene Phillips</td>\n",
-       "            <td>Chicago</td>\n",
-       "            <td>2023-05-30</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>10</td>\n",
-       "            <td>Jack Taylor</td>\n",
-       "            <td>New York</td>\n",
-       "            <td>2023-07-03</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>11</td>\n",
-       "            <td>Kathy White</td>\n",
-       "            <td>Chicago</td>\n",
-       "            <td>2023-08-12</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>12</td>\n",
-       "            <td>Liam Brown</td>\n",
-       "            <td>Los Angeles</td>\n",
-       "            <td>2022-10-29</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>13</td>\n",
-       "            <td>Mona Davis</td>\n",
-       "            <td>Chicago</td>\n",
-       "            <td>2023-01-15</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>14</td>\n",
-       "            <td>Nathan Evans</td>\n",
-       "            <td>New York</td>\n",
-       "            <td>2023-09-19</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>15</td>\n",
-       "            <td>Olivia Wright</td>\n",
-       "            <td>Los Angeles</td>\n",
-       "            <td>2023-04-12</td>\n",
+       "            <td>Shipped</td>\n",
+       "            <td>7648.53</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(1, 'Alice Johnson', 'New York', datetime.date(2023, 1, 10)),\n",
-       " (2, 'Bob Smith', 'Los Angeles', datetime.date(2022, 5, 15)),\n",
-       " (3, 'Charlie Lee', 'Chicago', datetime.date(2023, 3, 20)),\n",
-       " (4, 'Diana Adams', 'New York', datetime.date(2022, 7, 11)),\n",
-       " (5, 'Ethan Clark', 'Los Angeles', datetime.date(2023, 6, 5)),\n",
-       " (6, 'Fiona Green', 'Chicago', datetime.date(2023, 4, 8)),\n",
-       " (7, 'George Baker', 'New York', datetime.date(2022, 12, 17)),\n",
-       " (8, 'Helen Carter', 'Los Angeles', datetime.date(2023, 2, 22)),\n",
-       " (9, 'Irene Phillips', 'Chicago', datetime.date(2023, 5, 30)),\n",
-       " (10, 'Jack Taylor', 'New York', datetime.date(2023, 7, 3)),\n",
-       " (11, 'Kathy White', 'Chicago', datetime.date(2023, 8, 12)),\n",
-       " (12, 'Liam Brown', 'Los Angeles', datetime.date(2022, 10, 29)),\n",
-       " (13, 'Mona Davis', 'Chicago', datetime.date(2023, 1, 15)),\n",
-       " (14, 'Nathan Evans', 'New York', datetime.date(2023, 9, 19)),\n",
-       " (15, 'Olivia Wright', 'Los Angeles', datetime.date(2023, 4, 12))]"
+       "[('Pending', Decimal('4043.09')),\n",
+       " ('Cancelled', Decimal('4164.09')),\n",
+       " ('Delivered', Decimal('7240.55')),\n",
+       " ('Shipped', Decimal('7648.53'))]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT * FROM Customers "
+    "%%sql \n",
+    "SELECT \n",
+    "    status, SUM(total_amount) total\n",
+    "FROM orders \n",
+    "GROUP BY status\n",
+    "ORDER BY total"
    ]
   },
   {
